Add verify locked account to middleware and update get me api
