# src/components/me/meController.js
@@ -1,3 +1,7 @@
+import jwt from "jsonwebtoken";
+import UserService from "../user/userService.js";
+import UserModel from "../user/userModel.js";
+import CompanyModel from "../company/companyModel.js";
 import { StatusType } from "../../constants.js";
 import StatusEnum from "../../enums/Status.js";
 import CompanyService from "../company/companyService.js";
@@ -5,8 +9,22 @@ import MeService from "./meService.js";
 
 export const getProfile = async (req, res) => {
   try {
-    const { user } = req;
-    delete user.password;
+    const bearerHeader = req.headers.authorization;
+    if (bearerHeader == null) {
+      return res.status(401).json({
+        status: StatusType.ERROR,
+        message: "Access token không được cung cấp",
+      });
+    }
+    const token = bearerHeader.split(" ")[1];
+    const decoded = jwt.verify(token, process.env.TOKEN_SECRET);
+    const user = await UserService.getUserById(decoded.id);
+    if (user.is_verified === false) {
+      return res.status(403).json({
+        status: StatusType.ERROR,
+        message: "Tài khoản chưa xác thực",
+      });
+    }
     if (user.company_id) {
       const company = await CompanyService.getCompanyById({
         user,
@@ -15,9 +33,15 @@ export const getProfile = async (req, res) => {
       user.chatbot_mode = company.chatbot_mode;
     }
 
+    const result = await UserModel.findOne({
+      where: { id: user.id },
+      include: { model: CompanyModel },
+      attributes: { exclude: ["password"] },
+    });
+
     return res.status(200).json({
       status: StatusEnum.Success,
-      data: user,
+      data: result,
     });
   } catch (error) {
     return res
